--- a/CountdownTimer-JS/index.html
+++ b/CountdownTimer-JS/index.html
@@ -9,24 +9,46 @@
   </head>
   <body>
     <div id="container">
-      <p id="hour-label" class="label">Hours</p>
-      <p id="min-label" class="label">Minutes</p>
-      <p id="sec-label" class="label">Seconds</p>
-      <input type="number" id="hour" max="99" min="0" value="0" class="time" />
-      <p id="p1" class="semicolon">:</p>
-      <input
-        type="number"
-        id="minute"
-        max="60"
-        min="0"
-        value="0"
-        class="time"
-      />
-      <p id="p2" class="semicolon">:</p>
-      <input type="number" id="sec" max="60" min="0" value="0" class="time" />
-      <button class="btn" id="start">Start</button>
-      <button class="btn" id="reset">Reset</button>
-      <button class="btn" id="stop">Stop</button>
+      <div class="main">
+        <div class="titles">
+          <p id="hour-label" class="label">Hours</p>
+          <p id="min-label" class="label">Minutes</p>
+          <p id="sec-label" class="label">Seconds</p>
+        </div>
+        <div class="input-fields">
+          <input
+            type="number"
+            id="hour"
+            max="99"
+            min="0"
+            value="0"
+            class="time"
+          />
+          <p id="p1" class="semicolon">:</p>
+          <input
+            type="number"
+            id="minute"
+            max="60"
+            min="0"
+            value="0"
+            class="time"
+          />
+          <p id="p2" class="semicolon">:</p>
+          <input
+            type="number"
+            id="sec"
+            max="60"
+            min="0"
+            value="0"
+            class="time"
+          />
+        </div>
+        <div class="buttons">
+          <button class="btn" id="start">Start</button>
+          <button class="btn" id="reset">Reset</button>
+          <button class="btn" id="stop">Stop</button>
+        </div>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
